cif/org.eclipse.escet.cif.tests/tests/plcgen/prechecker_pow_cbrt.cif.iec.err
WARNING: I/O table file "plcgen/prechecker_pow_cbrt.csv" not found. The PLC code will not perform any I/O with the environment.
ERROR: CIF PLC code generator failed due to unsatisfied preconditions:

  -----------------------------------------------
  (1/2) Standard library function "cbrt" is used.
  -----------------------------------------------
   * In location "Powers.A":
     - edge c do r := cbrt(r);
                      ^

  ----------------------------------------------
  (2/2) Standard library function "pow" is used.
  ----------------------------------------------
   * In location "Powers.A":
     - edge c do r := pow(r, 2.0);
                      ^
